--- a/MeetMyLecturer/MeetMyLecturer/MeetMyLecturer.csproj
+++ b/MeetMyLecturer/MeetMyLecturer/MeetMyLecturer.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BAL\BAL.csproj" />
+    <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
 </Project>
