--- a/MeetMyLecturer/MeetMyLecturer/appsettings.json
+++ b/MeetMyLecturer/MeetMyLecturer/appsettings.json
@@ -7,9 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBStore": "Server=(local);Uid=sa;Pwd=123456;Database=MeetMyLecturer;TrustServerCertificate=True"
+    //"DBStore": "Server=(local);Uid=sa;Pwd=123456;Database=MeetMyLecturer;TrustServerCertificate=True"
+    "DBStore": "Server=tcp:thangpx.database.windows.net,1433;Initial Catalog=MeetMyLecturer;Persist Security Info=False;User ID=thangpx;Password=Thangkg123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+
   "JwtAuth": {
-    "Key": "MeetMyLecturer"
+    "Key": "MeetMyLecturerSE150138"
   }
 }
